# multi-agents-app-on-aws

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
agents/: __init__.py  analyst_agent.py  config.py  orchestrator.py  research_agent.py  writer_agent.py
deploy/agentcore/: analyst_agent.py  orchestrator.py  requirements.txt  research_agent.py  writer_agent.py
deploy/terraform/: main.tf  outputs.tf  providers.tf  variables.tf
examples/: sample_research_report.md
scripts/: cleanup.sh  deploy.sh  setup.sh  test_agents.sh
tests/: test_analyst_agent.py  test_orchestrator.py  test_research_agent.py
tools/: __init__.py  calculator.py  web_search.py
ui/: .env.example  app.py  requirements.txt
